--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.6.2",
     "@types/react-router-dom": "^5.1.7",
+    "lodash": "^4.17.20",
     "antd": "^4.12.2",
     "babel-loader": "~8.1",
     "css-loader": "^5.0.0",
