--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,6 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "babel-jest": "^26.6.3",
-    "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "eslint": "7.2.0",
     "eslint-config-airbnb": "18.2.1",
@@ -48,12 +47,14 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "knex": "^0.21.16",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "objection": "^2.2.12",
     "objection-unique": "^1.2.1",
     "passport": "^0.4.1",
